# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
gendiff/: __init__.py  cli.py  data.py  diff_builder.py  gendiff.py  generate_diff.py
gendiff/formatters/: __init__.py  stylish.py
gendiff/scripts/: gen_diff.py  gendiff.py
gendiff/tests/: test_generate_diff.py
tests/: test_generate_diff.py
tests/fixtures/: result_json  result_yml
